--- a/vuejs-guide/index.html
+++ b/vuejs-guide/index.html
@@ -1,11 +1,20 @@
 <!doctype html>
 <html>
     <head>
+        <!-- 도움되는 콘솔 경고를 포함한 개발 버전 -->
         <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+        <!-- 상용버전, 속도와 용량이 최적화됨. -->
+        <!--<script src="https://cdn.jsdelivr.net/npm/vue"></script>-->
     </head>
     <body>
         <div id="app">
             <p>{{ message }}</p>
+        </div>
+
+        <div id="app-2">
+            <span v-bind:title="message">
+                내 위에 잠시 마우스를 올리면 바인딩 된 title을 볼 수 있습니다!
+            </span>
         </div>
     </body>
     <script src="app.js"></script>
