--- a/vuejs-guide/index.html
+++ b/vuejs-guide/index.html
@@ -16,6 +16,18 @@
                 내 위에 잠시 마우스를 올리면 바인딩 된 title을 볼 수 있습니다!
             </span>
         </div>
+
+        <div id="app-3">
+            <p v-if="seen">이제 나를 볼 수 있어요</p>
+        </div>
+
+        <div id="app-4">
+            <ol>
+                <li v-for="todo in todos">
+                    {{ todo.text }}
+                </li>
+            </ol>
+        </div>
     </body>
     <script src="app.js"></script>
 </html>
