사용자 입력 핸들링

--- a/vuejs-guide/index.html
+++ b/vuejs-guide/index.html
@@ -28,6 +28,16 @@
                 </li>
             </ol>
         </div>
+
+        <div id="app-5">
+            <p>{{ message }}</p>
+            <button v-on:click="reverseMessage">메시지 뒤집기</button>
+        </div>
+
+        <div id="app-6">
+            <p>{{ message }}</p>
+            <input v-model="message">
+        </div>
     </body>
     <script src="app.js"></script>
 </html>
