--- a/vuejs-guide/01-getting-started/index.html
+++ b/vuejs-guide/01-getting-started/index.html
@@ -38,6 +38,22 @@
             <p>{{ message }}</p>
             <input v-model="message">
         </div>
+
+        <div id="app-7">
+            <ol>
+                <!-- todo-item 컴포넌트의 인스턴스 만들기 -->
+                <!--
+                    이제 각 todo-item에 todo 객체를 제공합니다.
+                    화면에 나오므로, 각 항목의 컨텐츠는 동적으로 바뀔 수 있습니다.
+                    또한 각 구성 요소에 "키"를 제공해야합니다. (나중에 설명 됨)
+                -->
+                <todo-item
+                    v-for="item in groceryList"
+                    v-bind:todo="item"
+                    v-bind:key="item.id">
+                </todo-item>
+            </ol>
+        </div>
     </body>
     <script src="app.js"></script>
 </html>
